# oci-rust-sdk

./: Cargo.toml
examples/: basic_usage.rs
src/: base_client.rs  config.rs  identity.rs  lib.rs  nosql.rs
tests/: identity.rs  nosql.rs
