[package]
name = "oci-sdk"
version = "0.4.0"
edition = "2024"
description = "Oracle Cloud Infrastructure SDK for Rust Lang"
license = "MIT"
repository = "https://github.com/digital-divas/oci-rust-sdk"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = "0.10.73"
base64 = "0.22.1"
sha2 = "0.10.9"
serde_json = "1.0.143"
chrono = "0.4.41"
home = "0.5.11"
configparser = "3.1.0"
